Fixed dropdown menu on small screens.

--- a/css/style.css
+++ b/css/style.css
@@ -621,7 +621,7 @@ button{
 
 @media screen and (max-width: 1100px) {
 
-	.ds-menu__submenu--lvl-1 {
+	.ds-menu__submenu_lvl_1 {
 		left: auto;
 		right: 100%;
 	}
